# basement-suite

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  SCAN_REPORT.md  UI_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: ErrorBoundary.tsx  icons.tsx  store.ts
src/features/browser/: DetailPane.tsx  Tree.tsx
src/features/catalog/: CatalogDebug.tsx
src/features/editor/: ColorPicker.tsx  Editor.tsx  EditorCanvas.tsx  HistoryPanel.tsx  LayersPanel.tsx  cropGrid.ts  floating.ts  history.ts  palette.ts  rectAtFrame.ts  selection.ts  sharedSheet.ts
src/features/export/: SaveToModDialog.tsx  modExport.ts
src/features/home/: EntryCard.tsx  Home.tsx  VirtualGrid.tsx  renderThumb.ts  thumbs.ts
src/features/mods/: BBCode.tsx  DiffViewer.tsx  ModsPanel.tsx  decodePng.ts
src/features/player/: AnimCard.tsx  AnimGrid.tsx  FrameStrip.tsx  Player.tsx  render.ts
src/features/shell/: AppShell.tsx  ConfirmDirtyModal.tsx  SettingsPopover.tsx  SetupWizard.tsx  isaacBranding.ts
src/lib/anm2/: bounds.ts  (+6 more)
src/test/: bounds.test.ts  catalog.test.ts  compose.test.ts  corpus.test.ts  cropGrid.test.ts  export.test.ts  fixtures.ts  golden.test.ts  modsMetadata.test.ts  names.test.ts  palette.test.ts  parse.test.ts  peek.test.ts  rectAtFrame.test.ts  sharedSheet.test.ts  sheetsUsed.test.ts  timeline.test.ts
(+18 files in other folders)
