[package]
name = "basement-suite"
version = "0.1.0"
description = "Pixel art editor + live anm2 previewer for Binding of Isaac modding"
edition = "2021"

[lib]
name = "basement_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
